---------------------------------------------------------------------------------------------------
Version: 20.2.10
Date: 2022-09-19
  Features:
  Changes:
  Bugfixes:
  Info:
---------------------------------------------------------------------------------------------------
Version: 20.2.9
Date: 2022-09-03
  Features:
  Changes:
    - Battlefluffy - made fire and explosion lights be present in all brightness conditions. So they don't just vanish/appear when its almost fully bright.
    - Battlefluffy - reduce the red levels in fire lighting. Man made fire light is a yellow color due to the high heat. This makes them closer color wise to the larger shooting and explosion lights. Forest fires are still an orange colored light, but a bit less red than before.
    - Battlefluffy - reduce fires central lighting a bit, so they don't stack as easily in to fully bright areas.
  Bugfixes:
  Info:
---------------------------------------------------------------------------------------------------
Version: 20.2.8
Date: 2022-08-27
  Features:
  Changes:
    - Battlefluffy - lamps turn on at lower light levels, so they are on over dusk rather than sometimes being post dusk.
    - Battlefluffy - all light effects start when the map is only a little bit dark, so while still slightly brightened than vanilla Factorio.
    - Battlefluffy - larger explosions and fires moved to having a bright inner light and a larger weaker lighting effect to highlight the shadows.
    - Battlefluffy - flamethrower turrets have a proper idle flame glow.
    - Battlefluffy - most light effects slightly lengthened for better visibility or aligned to explosion length better.
  Bugfixes:
  Info:
    - Version numbers back on track. Last 2 versions were released under an old minor version number. This did mess up Factorio's feature to update to the latest version for them.
---------------------------------------------------------------------------------------------------
Version: 20.2.7
Date: 2022-08-20