@@ -1,0 +1,5 @@
+[item-name]
+disabled-artillery-wagon=Artillery shell carriage
+
+[item-description]
+disabled-artillery-wagon=A carriage to bulk transfer artillery shells. Same as an artillery wagon, but with no gun.
